--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Learning</title>
 
+    <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/2436/premium/2436855.png?token=exp=1652281044~hmac=ba3291da1546a2653f41a36df4a12640" type="image/x-icon">
+
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -91,12 +93,11 @@
             <br><br>
             <button onclick="playPause()" class="btn" id="pause" title="Play Buhari Ko Khacho - Human Acharya song">Play
                 Music</button>
-        </div>
-
         <div class="sec-song">
             <span> Play BLUENESS - LA LA LA LA (REMIX) Song </span>
             <br><br>
-            <i onclick="myFunction()" class="fa fa-play" title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
+            <i onclick="myFunction()" class="fa fa-play"
+                title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
             <!-- <p id="demo" style="color: #fff;"></p>
             <script>
 
