--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Learning</title>
 
-    <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/2436/premium/2436855.png?token=exp=1652281044~hmac=ba3291da1546a2653f41a36df4a12640" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://cdn-icons.flaticon.com/png/512/2436/premium/2436855.png?token=exp=1652281044~hmac=ba3291da1546a2653f41a36df4a12640"
+        type="image/x-icon">
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -93,77 +95,69 @@
             <br><br>
             <button onclick="playPause()" class="btn" id="pause" title="Play Buhari Ko Khacho - Human Acharya song">Play
                 Music</button>
-        <div class="sec-song">
-            <span> Play BLUENESS - LA LA LA LA (REMIX) Song </span>
-            <br><br>
-            <i onclick="myFunction()" class="fa fa-play"
-                title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
-            <!-- <p id="demo" style="color: #fff;"></p>
-            <script>
+            <div class="sec-song">
+                <span> Play BLUENESS - LA LA LA LA (REMIX) Song </span>
+                <br><br>
+                <i onclick="myFunction()" class="fa fa-play"
+                    title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
+            </div>
 
-                var w = window.innerWidth;
-                var h = window.innerHeight;
+            <!-- <div class="ad">
+                <audio src="" controls id="audioPlayer">
+                    Sorry, your browser does not support HTML5!
+                </audio>
 
-                var x = document.getElementById("demo");
-                x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+                <ul id="playlist">
 
-            </script> -->
+                    <li class="current-song">
+                        <a href="Mr._D_-_Kaagaj_Ko_Note_(_कागजको_नोट_)____OFFICIAL_MUSIC_VIDEO.mp3">Mr. D - Kaagaj Ko
+                            Note (
+                            कागजको नोट )</a>
+                    </li>
+
+                    <li>
+                        <a href="CHINTU - CHUROT (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG(MP3_128K).mp3">CHINTU - CHUROT
+                            (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG</a>
+                    </li>
+
+                    <li>
+                        <a href="Bigreko Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song 2016(MP3_128K).mp3">Bigreko
+                            Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song</a>
+                    </li>
+
+                    <li>
+                        <a
+                            href="Galti Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL) (New Nepali Pop Song)(MP3_128K).mp3">Galti
+                            Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL)</a>
+                    </li>
+
+                    <li>
+                        <a
+                            href="DAMI DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG(MP3_128K).mp3">DAMI
+                            DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG</a>
+                    </li>
+
+                    <li>
+                        <a
+                            href="Baby I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song.mp3">Baby
+                            I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song</a>
+                    </li>
+
+                    <li>
+                        <a
+                            href="_Pushpa - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _ Sukumar.mp3">_Pushpa
+                            - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _
+                            Sukumar</a>
+                    </li>
+
+                </ul>
+
+                <marquee>
+                    Enjoy the music!!
+                </marquee>
+            </div> -->
+
         </div>
-
-        <!-- <div class="ad">
-            <audio src="" controls id="audioPlayer">
-                Sorry, your browser does not support HTML5!
-            </audio>
-
-            <ul id="playlist">
-
-                <li class="current-song">
-                    <a href="Mr._D_-_Kaagaj_Ko_Note_(_कागजको_नोट_)____OFFICIAL_MUSIC_VIDEO.mp3">Mr. D - Kaagaj Ko Note (
-                        कागजको नोट )</a>
-                </li>
-
-                <li>
-                    <a href="CHINTU - CHUROT (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG(MP3_128K).mp3">CHINTU - CHUROT
-                        (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG</a>
-                </li>
-
-                <li>
-                    <a href="Bigreko Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song 2016(MP3_128K).mp3">Bigreko
-                        Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song</a>
-                </li>
-
-                <li>
-                    <a
-                        href="Galti Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL) (New Nepali Pop Song)(MP3_128K).mp3">Galti
-                        Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL)</a>
-                </li>
-
-                <li>
-                    <a
-                        href="DAMI DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG(MP3_128K).mp3">DAMI
-                        DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG</a>
-                </li>
-
-                <li>
-                    <a
-                        href="Baby I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song.mp3">Baby
-                        I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song</a>
-                </li>
-
-                <li>
-                    <a
-                        href="_Pushpa - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _ Sukumar.mp3">_Pushpa
-                        - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _ Sukumar</a>
-                </li>
-
-            </ul>
-
-            <marquee>
-                Enjoy the music!!
-            </marquee>
-
-        </div> -->
-
     </div>
 
     <footer>
