button pause after play finished! bug fixed!

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         </header>
 
         <audio id="myAudio1" title="Buhari Ko Khacho - Human Acharya song"
-            src="Buhari Ko Khacho - Human Acharya _ Official Music Video(MP3_70K).mp3">
+            src="Buhari Ko Khacho - Human Acharya _ Official Music.mp3" preload="auto">
         </audio>
         <audio id="myAudio" title="BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
-            src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3">
+            src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3" preload="auto">
         </audio>
 
         <div class="first-song">
