function chnaged! bug fixed!

--- a/index.html
+++ b/index.html
@@ -93,71 +93,17 @@
         <div class="first-song">
             <span> Play Buhari Ko Khacho - Human Acharya Song </span>
             <br><br>
-            <button onclick="playPause()" class="btn" id="pause" title="Play Buhari Ko Khacho - Human Acharya song">Play
+            <button onclick="firstAudioFunction()" class="btn" id="pause" title="Play Buhari Ko Khacho - Human Acharya song">Play
                 Music</button>
         </div>
 
         <div class="sec-song">
             <span> Play BLUENESS - LA LA LA LA (REMIX) Song </span>
             <br><br>
-            <i onclick="myFunction()" class="fa fa-play"
+            <i onclick="secondAudioFunction()" class="fa fa-play"
                 title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
         </div>
 
-        <!-- <div class="ad">
-                <audio src="" controls id="audioPlayer">
-                    Sorry, your browser does not support HTML5!
-                </audio>
-
-                <ul id="playlist">
-
-                    <li class="current-song">
-                        <a href="Mr._D_-_Kaagaj_Ko_Note_(_कागजको_नोट_)____OFFICIAL_MUSIC_VIDEO.mp3">Mr. D - Kaagaj Ko
-                            Note (
-                            कागजको नोट )</a>
-                    </li>
-
-                    <li>
-                        <a href="CHINTU - CHUROT (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG(MP3_128K).mp3">CHINTU - CHUROT
-                            (ADHA RAAT MA) - HOSTEL PROMOTIONAL SONG</a>
-                    </li>
-
-                    <li>
-                        <a href="Bigreko Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song 2016(MP3_128K).mp3">Bigreko
-                            Manche Ma Bhatkeko Ghara __ Damber Nepali __ Lok Pop Song</a>
-                    </li>
-
-                    <li>
-                        <a
-                            href="Galti Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL) (New Nepali Pop Song)(MP3_128K).mp3">Galti
-                            Mero Chaina - Azay _ ETHOS ft. Sanjaya Chaudhary_ Bullet Flo (GXSOUL)</a>
-                    </li>
-
-                    <li>
-                        <a
-                            href="DAMI DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG(MP3_128K).mp3">DAMI
-                            DAMI ( दामी दामी ) __ BG X ABINASH __ OFFICIAL MUSIC VIDEO __ NEW NEPALI RAP SONG</a>
-                    </li>
-
-                    <li>
-                        <a
-                            href="Baby I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song.mp3">Baby
-                            I Love You - Maya Ko Barima Movie Song __ Yash Raj_ Keki Adhikari __ Nepali Movie Song</a>
-                    </li>
-
-                    <li>
-                        <a
-                            href="_Pushpa - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _ Sukumar.mp3">_Pushpa
-                            - The Rise (Hindi) - JaagoJaago Bakre _ AlluArjun_ Rashmika _ DSP _ VishalDadhlani _
-                            Sukumar</a>
-                    </li>
-
-                </ul>
-
-                <marquee>
-                    Enjoy the music!!
-                </marquee>
-            </div> -->
     </div>
 
     <footer>
