some bug fixed!

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <audio id="myAudio1" title="Buhari Ko Khacho - Human Acharya song"
             src="Buhari Ko Khacho - Human Acharya _ Official Music.mp3" preload="auto">
         </audio>
+
         <audio id="myAudio" title="BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
             src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3" preload="auto">
         </audio>
@@ -107,11 +108,11 @@
 
         <div class="music-player">
 
-            <audio src="" controls id="audioPlayer">
+            <audio src="" controls id="audioPlayer" oncontextmenu="return false;" controlsList="nodownload">
                 Sorry, your browser does not support HTML5!
             </audio>
 
-            <ul id="playlist">
+            <ul id="playlist" oncontextmenu="return false;">
 
                 <li class="current-song">
                     <a href="Daddy Yankee Dura Song.mp3">
