--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
             <span>(: Mr. Mohan Prasad Sharma</span>
 
         </p>
+        
+            <p id="demo"></p>
+
+            <script>
+            var w = window.innerWidth;
+            var h = window.innerHeight;
+            
+            var x = document.getElementById("demo");
+            x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+            </script>
 
     </div>
 
