--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Learning</h2>
         </header>
 
-        <p>
+        <!-- <p>
 
             &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
             or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
@@ -35,27 +35,25 @@
             <br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
-        </p>
-        
-            <p id="demo"></p>
+        </p> -->
 
-            <script>
+        <p id="demo"></p>
+
+        <script>
             var w = window.innerWidth;
             var h = window.innerHeight;
-            
+
             var x = document.getElementById("demo");
             x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
-            </script>
-
-    </div>
-
+        </script>
+</div>
     <div id="about" style="display:none;">
 
         <header>
             <h2>About</h2>
         </header>
 
-        <p>
+        <!-- <p>
 
             &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
             or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
@@ -64,7 +62,7 @@
             <br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
-        </p>
+        </p> -->
 
     </div>
 
@@ -93,8 +91,8 @@
             <h2>Songs</h2>
         </header>
 
-        <audio id="myAudio1" title="Buhari Ko Khacho - Human Acharya song"
-            src="Buhari Ko Khacho - Human Acharya _ Official Music.mp3" preload="auto">
+        <audio id="myAudio1" title="Trix Sarkar Aeezy Roka Sab Thik" src="Trix_Sarkar_Aeezy_Roka_Sab_Thi.mp3"
+            preload="auto">
         </audio>
 
         <audio id="myAudio" title="BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
@@ -102,7 +100,7 @@
         </audio>
 
         <div class="first-song">
-            <span> Play Buhari Ko Khacho - Human Acharya Song </span>
+            <span> Play Trix Sarkar Aeezy Roka Sab Thik Song </span>
             <br><br>
             <button onclick="firstAudioFunction()" class="btn" id="pause"
                 title="Play Buhari Ko Khacho - Human Acharya song">Play
@@ -125,38 +123,38 @@
             <ul id="playlist" oncontextmenu="return false;">
 
                 <li class="current-song">
-                    <a href="Daddy Yankee Dura Song.mp3">
-                        Daddy Yankee Dura Song
+                    <a href="Trix_Sarkar_Aeezy_Roka_Sab_Thi.mp3">
+                        Trix Sarkar Aeezy Roka Sab Thik
                     </a>
                 </li>
 
                 <li>
-                    <a href="Gedai_Jasto_Jindagi(Non-Explicit)-Neetesh_Jung_Kunwar.mp3">
-                        Gedai Jasto Jindagi(Non-Explicit)- Neetesh Jung Kunwar Song
+                    <a href="">
+
                     </a>
                 </li>
 
                 <li>
-                    <a href="BTS (Dynamite).mp3">
-                        BTS - (Dynamite) Song
+                    <a href="">
+
                     </a>
                 </li>
 
                 <li>
-                    <a href="BTS_(Boy_With_Luv)_(feat._Halsey).mp3">
-                        BTS - (Boy With Luv) song
+                    <a href="">
+
                     </a>
                 </li>
 
                 <li>
-                    <a href="BTS_MIC_Drop_(Steve_Aoki_Remix.mp3">
-                        BTS - MIC Drop (Steve Aoki Remix Song
+                    <a href="">
+
                     </a>
                 </li>
 
                 <li>
-                    <a href="5_55_-_Budi Song.mp3">
-                        5:55 - Budi Song
+                    <a href="">
+
                     </a>
                 </li>
 
