--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Learning</title>
 
-    <link rel="shortcut icon"
-        href="book icon.webp"
-        type="image/x-icon">
+    <link rel="shortcut icon" href="book icon.webp" type="image/x-icon">
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,18 +24,15 @@
             <h2>Learning</h2>
         </header>
 
-        <!-- <p>
+        <p>
 
-            &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
-            or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
-            through anywhere. Reader can read or learn anything from this universe. There is a lot of things to learn
-            from our surroundings.
+            <kbd>Hello,</kbd> <b>Welcome to the world of Learning.</b>
             <br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
-        </p> -->
+        </p>
 
-        <p id="demo"></p>
+        <!-- <p id="demo"></p>
 
         <script>
             var w = window.innerWidth;
@@ -45,7 +40,7 @@
 
             var x = document.getElementById("demo");
             x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
-        </script>
+        </script> -->
     </div>
     <div id="about" style="display:none;">
 
@@ -129,14 +124,14 @@
                 </li>
 
                 <li>
-                    <a href="Timile ta hoin.mp3">
+                    <a href="Timle Ta Hoina - Nepali Song.mp3">
                         Timile ta hoin Song
                     </a>
                 </li>
 
                 <li>
-                    <a href="">
-
+                    <a href="Gai ta Badhyo - Balidan.mp3">
+                        Gai ta Badhyo - Balidan
                     </a>
                 </li>
 
