Some New cHanges

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <p>
 
-            <kbd>Hello,</kbd> <b>Welcome to the world of Learning.</b>
+            <kbd>Hello,</kbd> Welcome to the world of Learning.
             <br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
@@ -41,6 +41,9 @@
             var x = document.getElementById("demo");
             x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
         </script> -->
+
+
+
     </div>
     <div id="about" style="display:none;">
 
@@ -90,7 +93,7 @@
             preload="auto">
         </audio>
 
-        <audio id="myAudio" title="BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
+        <audio id="myAudio" title="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
             src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3" preload="auto">
         </audio>
 
@@ -103,10 +106,10 @@
         </div>
 
         <div class="sec-song">
-            <span> Play BLUENESS - LA LA LA LA (REMIX) Song </span>
+            <span> Play BLUESSS - LA LA LA LA (REMIX) Song </span>
             <br><br>
             <i onclick="secondAudioFunction()" class="fa fa-play"
-                title="Play BLUENESS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
+                title="Play BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
         </div>
 
         <div class="music-player">
@@ -118,38 +121,44 @@
             <ul id="playlist" oncontextmenu="return false;">
 
                 <li class="current-song">
-                    <a href="Trix_Sarkar_Aeezy_Roka_Sab_Thi.mp3">
-                        Trix Sarkar Aeezy Roka Sab Thik
+                    <a href="Phosphenes - Yestai Nai Hola (Official Video).mp3">
+                        Play Phosphenes - Yestai Nai Hola Song
+                    </a>
+                </li>
+
+                <li>
+                    <a href="SACAR aka Lil Buddha - No Peace In Love ft. Starboi Virgin (Official Music Video).mp3">
+                        Play SACAR aka Lil Buddha - No Peace In Love Song
+                    </a>
+                </li>
+
+                <li>
+                    <a href="Tolai Baschu -Sasheet KC Ft. Darshana, Pravin, Girish ( Official MV + Download mp3 )  -HD.mp3">
+                        Play Tolai Baschu -Sasheet KC Song
+                    </a>
+                </li>
+
+                <li>
+                    <a href="HERDA RAMRO MACHHAPUCHHARE OFFICIAL HD BY DHARMENDRA SEWAN 2013.mp3">
+                        Play Herda Ramro MACHHAPUCHHARE Song
                     </a>
                 </li>
 
                 <li>
                     <a href="Timle Ta Hoina - Nepali Song.mp3">
-                        Timile ta hoin Song
+                        Play Timile ta hoin Song
                     </a>
                 </li>
 
                 <li>
                     <a href="Gai ta Badhyo - Balidan.mp3">
-                        Gai ta Badhyo - Balidan
+                       Play Gai ta Badhyo - Balidan Song
                     </a>
                 </li>
 
                 <li>
-                    <a href="">
-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="">
-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="">
-
+                    <a href="Buhari Ko Khacho - Human Acharya _ Official Music.mp3">
+                        Play Buhari Ko Khacho - Human Acharya Song
                     </a>
                 </li>
 
@@ -160,6 +169,10 @@
     </div>
 
     <footer>
+
+<div class="copyright">
+    Copyrights &copy; mohansharma. All Rights Reserved.
+</div>
 
         <button class="active" id="hm">Home</button>
         <button id="ab">About</button>
