--- a/index.html
+++ b/index.html
@@ -51,16 +51,14 @@
             <h2>About</h2>
         </header>
 
-        <!-- <p>
+        <div class="about-text">
 
-            &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
-            or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
-            through anywhere. Reader can read or learn anything from this universe. There is a lot of things to learn
-            from our surroundings.
-            <br>
-            <span>(: Mr. Mohan Prasad Sharma</span>
-
-        </p> -->
+            <p>
+                <img src="mohan.jpg" alt="Mohan Prasad Sharma">
+                <kbd>Hello,</kbd> I am Mohan Prasad Sharma. I am a student of Diploma in Computer Engineering. I am from Nepal. I am
+                currently living in Kathmandu. I am a web developer. I am a learner. I am a learner of the whole
+                universe.
+        </div>
 
     </div>
 
@@ -98,7 +96,12 @@
         </audio>
 
         <div class="first-song">
-            <span> Play Trix Sarkar Aeezy Roka Sab Thik Song </span>
+            
+            <select id="select">
+                <option value="1">Play Trix Sarkar Aeezy Roka Sab Thik Song</option>
+                <option value="2">Play BLUESSS - LA LA LA LA (REMIX) Song</option>
+            </select>
+
             <br><br>
             <button onclick="firstAudioFunction()" class="btn" id="pause"
                 title="Play Buhari Ko Khacho - Human Acharya song">Play
@@ -133,7 +136,8 @@
                 </li>
 
                 <li>
-                    <a href="Tolai Baschu -Sasheet KC Ft. Darshana, Pravin, Girish ( Official MV + Download mp3 )  -HD.mp3">
+                    <a
+                        href="Tolai Baschu -Sasheet KC Ft. Darshana, Pravin, Girish ( Official MV + Download mp3 )  -HD.mp3">
                         Play Tolai Baschu -Sasheet KC Song
                     </a>
                 </li>
@@ -152,7 +156,7 @@
 
                 <li>
                     <a href="Gai ta Badhyo - Balidan.mp3">
-                       Play Gai ta Badhyo - Balidan Song
+                        Play Gai ta Badhyo - Balidan Song
                     </a>
                 </li>
 
@@ -170,9 +174,9 @@
 
     <footer>
 
-<div class="copyright">
-    Copyrights &copy; mohansharma. All Rights Reserved.
-</div>
+        <div class="copyright">
+            Copyrights &copy; mohansharma. All Rights Reserved.
+        </div>
 
         <button class="active" id="hm">Home</button>
         <button id="ab">About</button>
