addition of new designs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
     <title>Learning</title>
 
     <link rel="shortcut icon" href="book icon.webp" type="image/x-icon">
@@ -45,6 +46,7 @@
 
 
     </div>
+
     <div id="about" style="display:none;">
 
         <header>
@@ -55,9 +57,11 @@
 
             <p>
                 <img src="mohan.jpg" alt="Mohan Prasad Sharma">
-                <kbd>Hello,</kbd> I am Mohan Prasad Sharma. I am a student of Diploma in Computer Engineering. I am from Nepal. I am
-                currently living in Kathmandu. I am a web developer. I am a learner. I am a learner of the whole
-                universe.
+                <kbd>Hello,</kbd> I am Mohan Prasad Sharma. I am a student of Diploma in Computer Engineering.
+                I am from Nepal. I am currently living in Kathmandu. I am a web developer. I am a learner. I
+                am a learner of the whole universe.
+            </p>
+
         </div>
 
     </div>
@@ -96,20 +100,15 @@
         </audio>
 
         <div class="first-song">
-            
-            <select id="select">
-                <option value="1">Play Trix Sarkar Aeezy Roka Sab Thik Song</option>
-                <option value="2">Play BLUESSS - LA LA LA LA (REMIX) Song</option>
-            </select>
-
+            <span>Play Trix Sarkar Aeezy Roka Sab Thik Song</span>
             <br><br>
             <button onclick="firstAudioFunction()" class="btn" id="pause"
-                title="Play Buhari Ko Khacho - Human Acharya song">Play
+                title="Play Trix Sarkar Aeezy Roka Sab Thik Song">Play
                 Music</button>
         </div>
 
         <div class="sec-song">
-            <span> Play BLUESSS - LA LA LA LA (REMIX) Song </span>
+            <span>Play BLUESSS - LA LA LA LA (REMIX) Song</span>
             <br><br>
             <i onclick="secondAudioFunction()" class="fa fa-play"
                 title="Play BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
