--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div id="home">
 
         <header>
-            <h2>Learning</h2>
+            <h2>The Learning</h2>
         </header>
 
         <p>
 
-            <kbd>Hello,</kbd> Welcome to the world of Learning.
+            <kbd>Hello,</kbd> Welcome to the world of <kbd style="color: #e4d3eb;"> 'The Learning'</kbd>.
             <br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
@@ -42,6 +42,20 @@
             var x = document.getElementById("demo");
             x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
         </script> -->
+
+        <div class="title">
+            <p>
+                <kbd> The Learning is the theme project. </kbd> <br><br>
+
+                <span>
+                    "The tool helps the user to their learning experience during the searching any project on the
+                    Internet.
+                    By provided songs page on this website, the user can enjoy the music and keep listening with
+                    learning.
+                    Provided songs can be mind freshening music which helps user to improve their learning."
+                </span>
+            </p>
+        </div>
 
 
 
