--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="home">
 
         <header>
-            <h2>The Learning</h2>
+            <h2>Learning</h2>
         </header>
 
         <p>
@@ -43,21 +43,28 @@
             x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
         </script> -->
 
-        <div class="title">
-            <p>
-                <kbd> The Learning is the theme project. </kbd> <br><br>
+        <audio id="myAudio1" title="Trix Sarkar Aeezy Roka Sab Thik" src="Trix_Sarkar_Aeezy_Roka_Sab_Thi.mp3"
+            preload="auto">
+        </audio>
 
-                <span>
-                    "The tool helps the user to their learning experience during the searching any project on the
-                    Internet.
-                    By provided songs page on this website, the user can enjoy the music and keep listening with
-                    learning.
-                    Provided songs can be mind freshening music which helps user to improve their learning."
-                </span>
-            </p>
+        <audio id="myAudio" title="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
+            src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3" preload="auto">
+        </audio>
+
+        <div class="first-song">
+            <span>Play Trix Sarkar Aeezy Roka Sab Thik Song</span>
+            <br><br>
+            <button onclick="firstAudioFunction()" class="btn" id="pause"
+                title="Play Trix Sarkar Aeezy Roka Sab Thik Song">Play
+                Music</button>
         </div>
 
-
+        <div class="sec-song">
+            <span>Play BLUESSS - LA LA LA LA (REMIX) Song</span>
+            <br><br>
+            <i onclick="secondAudioFunction()" class="fa fa-play"
+                title="Play BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
+        </div>
 
     </div>
 
@@ -70,7 +77,7 @@
         <div class="about-text">
 
             <p>
-                <img src="mohan.jpg" alt="Mohan Prasad Sharma">
+                <img src="Photos/mohan_1.jpg" alt="Mohan Prasad Sharma">
                 <kbd>Hello,</kbd> I am Mohan Prasad Sharma. I am a student of Diploma in Computer Engineering.
                 I am from Nepal. I am currently living in Kathmandu. I am a web developer. I am a learner. I
                 am a learner of the whole universe.
@@ -97,6 +104,21 @@
 
         </p>
 
+
+        <div class="title">
+            <p>
+                <kbd> Learning is the theme project. </kbd> <br><br>
+
+                <span>
+                    "The tool helps the user to their learning experience during the searching any project on the
+                    Internet.
+                    By provided songs page on this website, the user can enjoy the music and keep listening with
+                    learning.
+                    Provided songs can be mind freshening music which helps user to improve their learning."
+                </span>
+            </p>
+        </div>
+
     </div>
 
     <div id="song1" style="display:none;">
@@ -105,34 +127,7 @@
             <h2>Songs</h2>
         </header>
 
-        <audio id="myAudio1" title="Trix Sarkar Aeezy Roka Sab Thik" src="Trix_Sarkar_Aeezy_Roka_Sab_Thi.mp3"
-            preload="auto">
-        </audio>
-
-        <audio id="myAudio" title="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"
-            src="BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA _ VTEN.mp3" preload="auto">
-        </audio>
-
-        <div class="first-song">
-            <span>Play Trix Sarkar Aeezy Roka Sab Thik Song</span>
-            <br><br>
-            <button onclick="firstAudioFunction()" class="btn" id="pause"
-                title="Play Trix Sarkar Aeezy Roka Sab Thik Song">Play
-                Music</button>
-        </div>
-
-        <div class="sec-song">
-            <span>Play BLUESSS - LA LA LA LA (REMIX) Song</span>
-            <br><br>
-            <i onclick="secondAudioFunction()" class="fa fa-play"
-                title="Play BLUESSS - LA LA LA LA (REMIX) FT. LIL BUDDHA VTEN"></i>
-        </div>
-
         <div class="music-player">
-
-            <audio src="" controls id="audioPlayer" oncontextmenu="return false;" controlsList="nodownload">
-                Sorry, your browser does not support HTML5!
-            </audio>
 
             <ul id="playlist" oncontextmenu="return false;">
 
@@ -179,7 +174,12 @@
                     </a>
                 </li>
 
-            </ul>
+
+            </ul> 
+                           
+                <audio src="" controls id="audioPlayer" oncontextmenu="return false;" controlsList="nodownload">
+                    Sorry, your browser does not support HTML5!
+                </audio>
 
         </div>
 
