new design updated in the page!

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>
 
             <kbd>Hello,</kbd> Welcome to the world of <kbd style="color: #e4d3eb;"> 'The Learning'</kbd>.
-            <br>
+            <br><br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
         </p>
@@ -77,7 +77,7 @@
         <div class="about-text">
 
             <p>
-                <img src="Photos/mohan_1.jpg" alt="Mohan Prasad Sharma">
+                <img src="Photos/mohan.png" alt="Mohan Prasad Sharma">
                 <kbd>Hello,</kbd> I am Mohan Prasad Sharma. I am a student of Diploma in Computer Engineering.
                 I am from Nepal. I am currently living in Kathmandu. I am a web developer. I am a learner. I
                 am a learner of the whole universe.
@@ -108,14 +108,11 @@
         <div class="title">
             <p>
                 <kbd> Learning is the theme project. </kbd> <br><br>
-
-                <span>
-                    "The tool helps the user to their learning experience during the searching any project on the
-                    Internet.
-                    By provided songs page on this website, the user can enjoy the music and keep listening with
-                    learning.
-                    Provided songs can be mind freshening music which helps user to improve their learning."
-                </span>
+                "The tool helps the user to their learning experience during the searching any project on the
+                Internet.
+                By provided songs page on this website, the user can enjoy the music and keep listening with
+                learning.
+                Provided songs can be mind freshening music which helps user to improve their learning."
             </p>
         </div>
 
@@ -175,11 +172,11 @@
                 </li>
 
 
-            </ul> 
-                           
-                <audio src="" controls id="audioPlayer" oncontextmenu="return false;" controlsList="nodownload">
-                    Sorry, your browser does not support HTML5!
-                </audio>
+            </ul>
+
+            <audio src="" controls id="audioPlayer" oncontextmenu="return false;" controlsList="nodownload">
+                Sorry, your browser does not support HTML5!
+            </audio>
 
         </div>
 
@@ -187,7 +184,7 @@
 
     <footer>
 
-        <div class="copyright">
+        <div class="copyright" style="border-top: 2px solid rgb(233, 35, 35);">
             Copyrights &copy; mohansharma. All Rights Reserved.
         </div>
 
