--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 
         <p>
 
-            <kbd>Hello,</kbd> Welcome to the world of <kbd style="color: #e4d3eb;"> 'The Learning'</kbd>.
+            <kbd>Hello,</kbd> Welcome to the world of <kbd style="color: #e4d3eb;"> 'Learning'</kbd>.
+            <br><br>
+            &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
+            or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
+            through anywhere. Reader can read or learn anything from this universe. There is a lot of things to learn
+            from our surroundings.
             <br><br>
             <span>(: Mr. Mohan Prasad Sharma</span>
 
@@ -90,19 +95,10 @@
     <div id="info" style="display:none;">
 
         <header>
-            <h2>Info</h2>
+            <h2>Tools</h2>
         </header>
 
-        <p>
 
-            &#128161;<kbd>Note:</kbd> Learning is an independent way of getting knowledge or idea from the whole living
-            or non-living beings of the Universe. Nowadays, Learning sources are free and can easily be available
-            through anywhere. Reader can read or learn anything from this universe. There is a lot of things to learn
-            from our surroundings.
-            <br>
-            <span>(: Mr. Mohan Prasad Sharma</span>
-
-        </p>
 
     </div>
 
@@ -171,7 +167,7 @@
 
         <button class="active" id="hm">Home</button>
         <button id="ab">About</button>
-        <button id="inf">Info</button>
+        <button id="inf">Tools</button>
         <button id="song">Songs</button>
 
     </footer>
