new change have been made!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Learning</title>
 
-    <link rel="shortcut icon" href="book icon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="Photos/book icon.webp" type="image/x-icon">
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -98,7 +98,9 @@
             <h2>Tools</h2>
         </header>
 
-
+<div class="quiz">
+    
+</div>
 
     </div>
 
